# ml-test

./: .gitignore  apptainer_image.def  mantik_submit.sh  pyproject.toml
MLproject_folder/: MLproject  scikit-learn_testcase.py  unicore-config.yaml
