[tool.poetry]
name = "ml-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "ml_test"}]

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.2.2"
matplotlib = "^3.7.1"
mantik = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
